<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear_radio"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    tools:context=".activity.RadioActivity">
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rd_c"
            android:text="@string/Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:checked="true"
            android:id="@+id/rd_android"
            android:text="@string/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rd_ios"
            android:text="@string/Yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rd_java"
            android:text="@string/Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rd_php"
            android:text="@string/Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>